--- a/views/guest-page.ejs
+++ b/views/guest-page.ejs
@@ -255,77 +255,78 @@
 
   <section class="about" id="about">
     <div class="container">
-
       <figure class="about-banner">
         <img src="./images/about-banner-1.png" alt="House interior">
-
+  
         <img src="./images/about-banner-2.jpg" alt="House interior" class="abs-img">
       </figure>
-
       <div class="about-content">
-
+  
         <p class="section-subtitle">About Us</p>
-
-        <h2 class="h2 section-title">The Leading Real Estate Rental Marketplace.</h2>
-
+  
+        <h2 class="h2 section-title">The Leading Real Estate Marketplace in Sierra Leone.</h2>
+  
         <p class="about-text">
-          Welcome to Homehub, Sierra Leone's leading real estate marketplace where house owners and 
+          Welcome to HomeHub SL agency, Sierra Leone's leading real estate marketplace where house owners and 
           tenants/buyers connect seamlessly. Our mission is to simplify the real estate experience by 
           providing a comprehensive, user-friendly platform that caters to all your property needs.
         </p>
-
+  
         <ul class="about-list">
-
+  
           <li class="about-item">
             <div class="about-item-icon">
               <ion-icon name="home-outline"></ion-icon>
             </div>
-
+  
             <p class="about-item-text">Smart Home Design</p>
           </li>
-
+  
           <li class="about-item">
             <div class="about-item-icon">
               <ion-icon name="leaf-outline"></ion-icon>
             </div>
-
+  
             <p class="about-item-text">Beautiful Scene Around</p>
           </li>
-
+  
           <li class="about-item">
             <div class="about-item-icon">
               <ion-icon name="wine-outline"></ion-icon>
             </div>
-
+  
             <p class="about-item-text">Exceptional Lifestyle</p>
           </li>
-
+  
           <li class="about-item">
             <div class="about-item-icon">
               <ion-icon name="shield-checkmark-outline"></ion-icon>
             </div>
-
+  
             <p class="about-item-text">Complete 24/7 Security</p>
           </li>
-
+  
         </ul>
-
+  
         <p class="callout">
-          At Homehub Agency, we believe that finding your dream home should be an 
-          exciting and enjoyable experience. Our platform is designed to make the 
-          process of buying, selling, or renting properties as seamless 
-          and stress-free as possible. 
+          At HomeHub SL Agency, we pride ourselves on being your trusted partner in the real estate market. Our extensive range of services is designed to meet all your housing needs, whether you’re looking to sell, rent, or buy a home. Our dedicated team of experienced professionals is committed to providing personalized support, ensuring that every transaction is smooth and stress-free. <br>
+  
+          When you choose to sell your home with us, we use our market expertise and innovative strategies to secure the best possible price. For those looking to rent, we offer a diverse selection of properties to match your unique lifestyle and budget. If you’re in the market to buy, our knowledgeable agents will help you find the perfect home that meets all your requirements. <br>
+  
+          At HomeHub SL Agency, we understand the importance of finding a place that feels like home. That’s why we go above and beyond to deliver exceptional service, from the initial consultation to the final handshake. Experience the difference with HomeHub SL Agency, where your home journey begins. 
         </p>
-
-        <a href="#service" class="btn">Our Services</a>
-
+        <a href="/service" class="btn">Our Services</a>
       </div>
-
     </div>
   </section>
   
   
+  
    <!-- 
+        - #SERVICE
+      -->
+
+      <!-- 
         - #SERVICE
       -->
 
@@ -346,15 +347,14 @@
                 </div>
 
                 <h3 class="h3 card-title">
-                  <a href="#">Buy a home</a>
+                  <a href="/all-properties">Buy a home</a>
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on this application, we can match you with a house you will want
-                  to call home.
+                  At HomeHub SL Agency, we specialize in providing comprehensive real estate services. Whether you are looking to sell, rent, or buy a home, our dedicated team is here to guide you through every step of the process. If you’re in the market to buy, our knowledgeable agents will help you find the perfect home that meets all your requirements.
                 </p>
 
-                <a href="#" class="card-link">
+                <a href="/all-properties" class="card-link">
                   <span>Find A Home</span>
 
                   <ion-icon name="arrow-forward-outline"></ion-icon>
@@ -371,15 +371,14 @@
                 </div>
 
                 <h3 class="h3 card-title">
-                  <a href="#">Rent a home</a>
+                  <a href="/all-properties">Rent a home</a>
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on this application, we can match you with a house you will want
-                  to call home.
+                  At HomeHub SL Agency, we understand the importance of finding a place that feels like home. With a deep understanding of the market and a commitment to client satisfaction, we strive to make your real estate experience seamless and successful. Discover the perfect home with HomeHub SL Agency today. 
                 </p>
 
-                <a href="#" class="card-link">
+                <a href="/all-properties" class="card-link">
                   <span>Find A Home</span>
 
                   <ion-icon name="arrow-forward-outline"></ion-icon>
@@ -396,15 +395,14 @@
                 </div>
 
                 <h3 class="h3 card-title">
-                  <a href="#">Sell a home</a>
+                  <a href="/all-properties">Sell a home</a>
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on this application, we can match you with a house you will want
-                  to call home.
+                  Experience the difference with HomeHub SL Agency, where your home journey begins. When you choose to sell your home with us, we use our market expertise and innovative strategies to secure the best possible price. For those looking to rent, we offer a diverse selection of properties to match your unique lifestyle and budget. 
                 </p>
 
-                <a href="#" class="card-link">
+                <a href="/all-properties" class="card-link">
                   <span>Find A Home</span>
 
                   <ion-icon name="arrow-forward-outline"></ion-icon>
