--- a/views/include/_about-admin.ejs
+++ b/views/include/_about-admin.ejs
@@ -1,65 +1,66 @@
-  <section class="about" id="about">
-    <div class="container">
-      <figure class="about-banner">
-        <img src="./images/about-banner-1.png" alt="House interior">
+<section class="about" id="about">
+  <div class="container">
+    <figure class="about-banner">
+      <img src="./images/about-banner-1.png" alt="House interior">
 
-        <img src="./images/about-banner-2.jpg" alt="House interior" class="abs-img">
-      </figure>
-      <div class="about-content">
+      <img src="./images/about-banner-2.jpg" alt="House interior" class="abs-img">
+    </figure>
+    <div class="about-content">
 
-        <p class="section-subtitle">About Us</p>
+      <p class="section-subtitle">About Us</p>
 
-        <h2 class="h2 section-title">The Leading Real Estate Marketplace in Sierra Leone.</h2>
+      <h2 class="h2 section-title">The Leading Real Estate Marketplace in Sierra Leone.</h2>
 
-        <p class="about-text">
-          Welcome to Homehub, Sierra Leone's leading real estate marketplace where house owners and 
-          tenants/buyers connect seamlessly. Our mission is to simplify the real estate experience by 
-          providing a comprehensive, user-friendly platform that caters to all your property needs.
-        </p>
+      <p class="about-text">
+        Welcome to HomeHub SL agency, Sierra Leone's leading real estate marketplace where house owners and 
+        tenants/buyers connect seamlessly. Our mission is to simplify the real estate experience by 
+        providing a comprehensive, user-friendly platform that caters to all your property needs.
+      </p>
 
-        <ul class="about-list">
+      <ul class="about-list">
 
-          <li class="about-item">
-            <div class="about-item-icon">
-              <ion-icon name="home-outline"></ion-icon>
-            </div>
+        <li class="about-item">
+          <div class="about-item-icon">
+            <ion-icon name="home-outline"></ion-icon>
+          </div>
 
-            <p class="about-item-text">Smart Home Design</p>
-          </li>
+          <p class="about-item-text">Smart Home Design</p>
+        </li>
 
-          <li class="about-item">
-            <div class="about-item-icon">
-              <ion-icon name="leaf-outline"></ion-icon>
-            </div>
+        <li class="about-item">
+          <div class="about-item-icon">
+            <ion-icon name="leaf-outline"></ion-icon>
+          </div>
 
-            <p class="about-item-text">Beautiful Scene Around</p>
-          </li>
+          <p class="about-item-text">Beautiful Scene Around</p>
+        </li>
 
-          <li class="about-item">
-            <div class="about-item-icon">
-              <ion-icon name="wine-outline"></ion-icon>
-            </div>
+        <li class="about-item">
+          <div class="about-item-icon">
+            <ion-icon name="wine-outline"></ion-icon>
+          </div>
 
-            <p class="about-item-text">Exceptional Lifestyle</p>
-          </li>
+          <p class="about-item-text">Exceptional Lifestyle</p>
+        </li>
 
-          <li class="about-item">
-            <div class="about-item-icon">
-              <ion-icon name="shield-checkmark-outline"></ion-icon>
-            </div>
+        <li class="about-item">
+          <div class="about-item-icon">
+            <ion-icon name="shield-checkmark-outline"></ion-icon>
+          </div>
 
-            <p class="about-item-text">Complete 24/7 Security</p>
-          </li>
+          <p class="about-item-text">Complete 24/7 Security</p>
+        </li>
 
-        </ul>
+      </ul>
 
-        <p class="callout">
-          At Homehub Agency, we believe that finding your dream home should be an 
-          exciting and enjoyable experience. Our platform is designed to make the 
-          process of buying, selling, or renting properties as seamless 
-          and stress-free as possible. 
-        </p>
-        <a href="/admin-service" class="btn">Our Services</a>
-      </div>
+      <p class="callout">
+        At HomeHub SL Agency, we pride ourselves on being your trusted partner in the real estate market. Our extensive range of services is designed to meet all your housing needs, whether you’re looking to sell, rent, or buy a home. Our dedicated team of experienced professionals is committed to providing personalized support, ensuring that every transaction is smooth and stress-free. <br>
+
+        When you choose to sell your home with us, we use our market expertise and innovative strategies to secure the best possible price. For those looking to rent, we offer a diverse selection of properties to match your unique lifestyle and budget. If you’re in the market to buy, our knowledgeable agents will help you find the perfect home that meets all your requirements. <br>
+
+        At HomeHub SL Agency, we understand the importance of finding a place that feels like home. That’s why we go above and beyond to deliver exceptional service, from the initial consultation to the final handshake. Experience the difference with HomeHub SL Agency, where your home journey begins. 
+      </p>
+      <a href="/admin-service" class="btn">Our Services</a>
     </div>
-  </section>
+  </div>
+</section>
