--- a/views/include/_hero.ejs
+++ b/views/include/_hero.ejs
@@ -19,7 +19,7 @@
             <h2 class="h1 hero-title">Find Your Dream House By Us</h2>
 
             <p class="hero-text">
-              At Homehub Agency, we believe that finding your dream home should be an exciting and enjoyable experience. Our platform is designed to make the process of buying, selling, or renting properties as seamless and stress-free as possible.
+              At HomeHub SL Agency, we believe that finding your dream home should be an exciting and enjoyable experience. Our platform is designed to make the process of buying, selling, or renting properties as seamless and stress-free as possible.
             </p>
 
             <a href="/create-apartment">
