--- a/views/include/_service.ejs
+++ b/views/include/_service.ejs
@@ -19,15 +19,14 @@
                 </div>
 
                 <h3 class="h3 card-title">
-                  <a href="#">Buy a home</a>
+                  <a href="/all-properties">Buy a home</a>
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on the website, we can match you with a house you will want
-                  to call home.
+                  At HomeHub SL Agency, we specialize in providing comprehensive real estate services. Whether you are looking to sell, rent, or buy a home, our dedicated team is here to guide you through every step of the process. If you’re in the market to buy, our knowledgeable agents will help you find the perfect home that meets all your requirements.
                 </p>
 
-                <a href="#" class="card-link">
+                <a href="/all-properties" class="card-link">
                   <span>Find A Home</span>
 
                   <ion-icon name="arrow-forward-outline"></ion-icon>
@@ -44,15 +43,14 @@
                 </div>
 
                 <h3 class="h3 card-title">
-                  <a href="#">Rent a home</a>
+                  <a href="/all-properties">Rent a home</a>
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on the website, we can match you with a house you will want
-                  to call home.
+                  At HomeHub SL Agency, we understand the importance of finding a place that feels like home. With a deep understanding of the market and a commitment to client satisfaction, we strive to make your real estate experience seamless and successful. Discover the perfect home with HomeHub SL Agency today. 
                 </p>
 
-                <a href="#" class="card-link">
+                <a href="/all-properties" class="card-link">
                   <span>Find A Home</span>
 
                   <ion-icon name="arrow-forward-outline"></ion-icon>
@@ -69,15 +67,14 @@
                 </div>
 
                 <h3 class="h3 card-title">
-                  <a href="#">Sell a home</a>
+                  <a href="/all-properties">Sell a home</a>
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on the website, we can match you with a house you will want
-                  to call home.
+                  Experience the difference with HomeHub SL Agency, where your home journey begins. When you choose to sell your home with us, we use our market expertise and innovative strategies to secure the best possible price. For those looking to rent, we offer a diverse selection of properties to match your unique lifestyle and budget. 
                 </p>
 
-                <a href="#" class="card-link">
+                <a href="/all-properties" class="card-link">
                   <span>Find A Home</span>
 
                   <ion-icon name="arrow-forward-outline"></ion-icon>
