--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -6,21 +6,9 @@
   <%- include('include/_hero') %>
   <!-- /include hero -->   
   
-  <!-- include service -->
-  
-  <!-- /include service -->
-       
-  <!-- include homepage-properties -->
-  
-  <!-- /include homepage-properties -->
-        
-  <!-- include features -->
-  
-  <!-- /include features -->
-  
-  <!-- include blog -->
-  <%- include('include/_blog', { apartments: apartments }) %>
-  <!-- /include blog -->
+  <!-- include frequently asked question -->
+  <%- include('include/_faq') %>
+  <!-- /include frequently asked question -->
   
   <!-- include cta -->
   <%- include('include/_cta') %>
