--- a/views/service.ejs
+++ b/views/service.ejs
@@ -6,6 +6,10 @@
 <%- include('include/_hero') %>
 <!-- /include hero -->
 
+ <!-- include about -->
+ <%- include('include/_about') %>
+<!-- /include about -->
+
 <!-- include service -->
 <%- include('include/_service') %>
 <!-- /include service -->
