--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -110,7 +110,7 @@
             </li> -->
 
             <li>
-              <a href="#" class="footer-link">Contact us</a>
+              <a href="#" class="footer-link" onclick="redirectToContact('<%= role %>')">Contact us</a>
             </li>
 
             <li>
@@ -177,11 +177,11 @@
             </li> -->
 
             <li>
-              <a href="#" class="footer-link">FAQ</a>
+              <a href="/faq" class="footer-link">FAQ</a>
             </li>
 
             <li>
-              <a href="/contact" class="footer-link">Contact us</a>
+              <a href="#" class="footer-link" onclick="redirectToContact('<%= role %>')">Contact us</a>
             </li>
 
           </ul>
@@ -221,11 +221,21 @@
    </script>
 
 <script>
+  // Redirect to the about page
   function redirectToAbout(role) {
       if (role === 'admin') {
           window.location.href = '/admin-about';
       } else if (role === 'user') {
           window.location.href = '/about';
+      }
+  }
+
+  // Redirect to the contact page
+  function redirectToContact(role) {
+      if (role === 'admin') {
+          window.location.href = '/admin-contact';
+      } else if (role === 'user') {
+          window.location.href = '/contact';
       }
   }
 </script>
