--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -63,7 +63,7 @@
 
               <span><%= greeting %> Administrator | <%= user ? user.username : '' %>
                 <% if (sudo) { %>
-                  <p>(Creator)</p>
+                  <p>(Owner)</p>
               <% } else { %>
                   <p></p> <!-- Empty paragraph -->
               <% } %>
